Unify Surefire arguments for JPMS